# roadfighter_remake

./: .gitignore  CMakeLists.txt  INSTALL  README.md  readme.txt
.github/workflows/: build-macos.yml  build-windows.yml  build.yml
sound/set1/: description.txt
sound/set2/: description.txt
sound/set3/: description.txt
src/: CCarObject.cpp  CEnemyCarObject.cpp  CEnemyFastCarObject.cpp  CEnemyNormalCarObject.cpp  CEnemyRacerCarObject.cpp  CEnemySlidderCarObject.cpp  CEnemyTruckObject.cpp  CExplosionObject.cpp  CFuelObject.cpp  CGame.cpp  CGame.h  CObject.cpp  CObject.h  CPlayerCarObject.cpp  CRoadFighter.cpp  CRoadFighter.h  CSemaphoreObject.cpp  CTile.cpp  CTile.h  auxiliar.cpp  auxiliar.h  configuration.cpp  debug.cpp  gameover_state.cpp  interlevel_state.cpp  konami_state.cpp  loadmg2.cpp  main.cpp  menu_state.cpp  playing_state.cpp  presentation_state.cpp  quick_tables.cpp  sdl3_compat.h  sdl3_ttf_compat.h  sge_compat.cpp  sge_compat.h  sound.cpp  sound.h
